resharper/resharper-unity/test/data/CSharp/Intentions/QuickFixes/InvalidSignature/Availability/InitializeOnLoadMethod.cs
using UnityEditor;

public class Foo
{
    [InitializeOnLoadMethod]
    public static void OnLoad(int i, i{caret}nt j)
    {
    }
}
